--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Flash
 email: your-email@example.com
 description: Learn - Code - Refactor - Share - Repeat
-baseurl: "varad-blogs"
-# baseurl: ""
+#baseurl: "varad-blogs"
+baseurl: ""
 url: ""
 github_username:  pyvarad
 repository: pyvarad/pyvarad.github.io
