--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Flash
 email: your-email@example.com
 description: Learn - Code - Refactor - Share - Repeat
-#baseurl: "varad-blogs"
-baseurl: ""
-url: ""
+baseurl: "varad-blogs"
+#baseurl: ""
+url: "varad-blogs"
 github_username:  pyvarad
 repository: pyvarad/pyvarad.github.io
 
