--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Flash
 email: your-email@example.com
 description: Learn - Code - Refactor - Share - Repeat
-baseurl: "varad-blogs"
+baseurl: ""
 #baseurl: ""
 url: "http://www.varadblogs.com/"
 github_username:  pyvarad
