--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: Learn - Code - Refactor - Share - Repeat
 baseurl: ""
 #baseurl: ""
-url: "http://www.varadblogs.com/"
+url: "http://www.varadblogs.com"
 github_username:  pyvarad
 repository: pyvarad/pyvarad.github.io
 
